Fix hero img margin on small screens and title on larger screens

--- a/assets/style/pages/_single.scss
+++ b/assets/style/pages/_single.scss
@@ -3,7 +3,7 @@
 }
 
 .page-wrapper h1 {
-    margin-top: 1em;
+    margin-top: 2em;
     margin-bottom: 0.7em;
     font-size: 4rem;
     line-height: 1.1;
@@ -161,21 +161,21 @@
 
     .fixed-header {
         display: block;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    background-color: map-get($colors, blackpearl);
-    z-index: 5;
-    color: var(--theme-color);
-    padding: 1em;
-    min-height: 55px;
-    height: auto;
-    border-bottom: 1px solid #000;
-    font-size: 1.8rem;
-    a{
-        text-decoration: none;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        background-color: rgba(24,24,24,1);
+        z-index: 5;
+        color: var(--theme-color);
+        padding: 1em;
+        min-height: 55px;
+        height: auto;
+        border-bottom: 1px solid #000;
+        font-size: 1.8rem;
+        a{
+            text-decoration: none;
+        }
     }
-}
 }
 
 @media (min-width: 1600px) {
