--- a/assets/style/partials/_homepage-hero.scss
+++ b/assets/style/partials/_homepage-hero.scss
@@ -67,7 +67,7 @@ section.hero {
     grid-column-gap: 15px;
     
     h1 {
-        margin: 1em 0;
+        margin: 2.5em 0 1em 0;
         line-height: 1.1;
     }
     
